deploy/k3s/base/01-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kenmoini-com
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: kenmoini-com
    app.kubernetes.io/name: kenmoini-com
    app.kubernetes.io/part-of: kenmoini-com
