deploy/k3s/base/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kenmoini-com-svc
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: kenmoini-com
    app.kubernetes.io/name: kenmoini-com
    app.kubernetes.io/part-of: kenmoini-com
spec:
  ports:
    - port: 8080
      name: web
  selector:
    app: kenmoini-com
